Allow alterable for tags on posts

--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,7 @@ prose:
           value: ""
       - name: "tags"
         field:
+          alterable: "true"
           element: "multiselect"
           label: "Add Tags"
           placeholder: "Choose Tags"
